Bug 129375 - Fix vertical align
git-svn-id: svn://svn.office.custis.ru/3rdparty/bugzilla.org/trunk@1764 6955db30-a419-402b-8a0d-67ecbb4d7f56

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -432,7 +432,9 @@ div.user_match {
     vertical-align: top;
     font-weight: bold;
 }
-.field_value, form#Create th, form#Create td {
+
+/*.field_value, */
+form#Create th, form#Create td {
     vertical-align: top;
 }
 th.required:before {
